# PK-Group5

./: .flake8  .gitignore  LICENSE  README.md  contributor_README.md  prototype.py  pyproject.toml  requirements.txt  setup.py  usage.py
.github/workflows/: codecoverage.yml  multiple_os.yml  unit_tests.yml
docs/: conf.py  contributor_README.md  devREADME.md  index.rst  quickstart.rst  requirements.txt
docs/source/: conf.py  index.rst  quickstart.rst
pkmodel/: __init__.py  model.py  protocol.py  solution.py  version_info.py
pkmodel/tests/: __init__.py  test_model.py  test_protocol.py  test_solution.py
